<resources>
    <string name="app_name">Quicksum</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="undoButtonText">Undo</string>
    <string name="otherButtonText">Other</string>
    <string name="coloursButtonText">Colours</string>
    <string name="defaultStatus">0</string>
    <string name="clearButtonText">Clear</string>
    <string name="defaultColorButtonText">Default</string>
    <string name="galaxyColorButtonText">Galaxy</string>
    <string name="neutralColorButtonText">Neutral</string>
    <string name="modernColorButtonText">Modern</string>
    <string name="sunColorButtonText">Sun</string>
    <string name="toMainButtonText">Back</string>
    <string name="coloursTitle">Colours</string>
</resources>
